# PrivateMailRoom

./: .env.example  .gitignore  README.md  SESSION_MEMORY_2026-03-31.md  classify.py  ingest_email.py  pyproject.toml  requirements.txt  run_dashboard.py
.kiro/specs/mailroom/: design.md  (+2 more)
.kiro/steering/: mailroom.md
Test_Council/: council.yaml
config/: classification_only_prompt.md  classification_only_tree.json  classification_tree.json  dashboard_settings.json  llm.yaml  map.md  reply_prompt.md  settings.yaml  system_prompt.md  tree.yaml
dashboard/: __init__.py  app.py
dashboard/templates/: index.html
db/: __init__.py  schema.sql
engine/: __init__.py  classifier.py  dispatcher.py  email_ingester.py  graph_mail.py  history.py  junk.py  llm.py  models.py  msg_parser.py  skill_runner.py  title_generator.py
engine/nexus/: ARCHITECTURE.md  __init__.py  claude_client.py  eml_parser.py  folder_schema.py  forge.py  prompts.py  sanitizer.py
integrations/: __init__.py
skills/: README.md  SCROLL_DEVELOPMENT_GUIDE.md  companion_animals_scroll.json  parking_scroll.json  skills.md  waste_management_scroll.json
skills/companion_animals/: _default.json  barking_complaint.json  desexing_notification.json  ownership_change.json  pet_registration.json  wandering_animal.json
skills/regulation_of_parking/: _default.json  illegal_parking_report.json  parking_appeal.json  parking_enquiry.json  parking_payment.json  parking_permit.json
skills/waste_management_operations/: _default.json  bin_request.json  bulk_waste.json  collection_enquiry.json  missed_collection.json
(+43 files in other folders)
